<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chanta.androidlaba3.EditNewRecordActivity">

    <EditText
        android:id="@+id/edit_description_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:text="newRecord" />

    <TextView
        android:id="@+id/text_date_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_description_record"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_date_start" />


    <LinearLayout
        android:id="@+id/date_start_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_date_start"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:onClick="onChooseEndDate"
            android:text="@string/date" />

        <TextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:onClick="onChooseEndTime"
            android:text="@string/time" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_date_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_start_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_date_end" />


    <LinearLayout
        android:id="@+id/date_end_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_date_end"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:onClick="onChooseStartDate"
            android:text="@string/date" />

        <TextView
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:onClick="onChooseStartTime"
            android:text="@string/time" />
    </LinearLayout>

    <Button
        android:id="@+id/addImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_end_layout"
        android:layout_marginTop="16dp"
        android:text="@string/add_image" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/photoRecycleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addImageBtn"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:clipToPadding="false"
        android:gravity="top"
        android:padding="5dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/item_photo" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/accepted_floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:clickable="true"
        app:srcCompat="@mipmap/ic_navigation_check_24" />


</RelativeLayout>
